# wiretap

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md
.github/workflows/: ci.yml  release.yml
app-macos/: project.yml
app-macos/OpenCallNotes/: App.swift  ContentView.swift  Info.plist  OpenCallNotes.entitlements
app-macos/OpenCallNotes.xcodeproj/: project.pbxproj
app-macos/OpenCallNotes.xcodeproj/project.xcworkspace/xcuserdata/radomir.xcuserdatad/: UserInterfaceState.xcuserstate
app-macos/OpenCallNotes/Models/: Device.swift  Session.swift  TranscribeProgress.swift  Transcript.swift
app-macos/OpenCallNotes/Services/: AudioTrackWriter.swift  CallRecorder.swift  Preferences.swift  SessionStore.swift  WorkerClient.swift
app-macos/OpenCallNotes/Views/: PreferencesView.swift  RecordingPanel.swift  SessionDetailView.swift  SessionListView.swift
docs/: architecture.md  dev-guide.md  privacy.md  user-guide.md
opencallnotes-agent-docs/: 02_ARCHITECTURE.md  05_WORKER_API.md  07_IMPLEMENTATION_PLAN.md  08_TASKS_FOR_AGENT.md  09_DEFINITION_OF_DONE.md  10_DECISION_POLICY.md  11_README_DRAFT.md  12_RISKS_AND_LIMITATIONS.md
scripts/: bootstrap.sh  build-release.sh  run-app-dev.sh  run-worker.sh
wiretap-agent-docs/: 00_AGENT_MISSION.md  01_PRODUCT_SPEC.md  03_TECH_STACK.md  04_REPO_STRUCTURE.md  06_UI_SPEC.md  13_PROMPT_FOR_AGENT.md
worker/: README.md  pyproject.toml
worker/packaging/: entry.py
worker/src/opencallnotes_worker/: __init__.py  __main__.py  audio.py  cli.py  devices.py  export.py  models.py  paths.py  progress.py  store.py  transcribe.py
worker/tests/: conftest.py  test_call_recording.py  test_cli.py  test_devices.py  test_export.py  test_models.py  test_multitrack.py  test_paths.py  test_progress.py  test_recording.py  test_store.py  test_transcribe.py
(+1 files in other folders)
