[project]
name = "opencallnotes-worker"
version = "0.1.0"
description = "Local-first audio recording + on-device transcription worker for OpenCallNotes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [{ name = "OpenCallNotes contributors" }]
dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
# Real audio capture + on-device transcription. These pull native dependencies
# (PortAudio, Apple Silicon MLX) and are NOT required to run the worker logic or
# the test suite, which use the synthetic/fake backends.
audio = ["sounddevice>=0.4,<1.0", "numpy>=1.26"]
mlx = ["mlx-whisper>=0.4"]

[project.scripts]
opencallnotes-worker = "opencallnotes_worker.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencallnotes_worker"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S"]
# S101: asserts are fine in tests (handled by per-file ignores below).

[tool.ruff.lint.per-file-ignores]
# S101: asserts are expected in tests. S603: tests legitimately spawn the worker
# as a subprocess to exercise the real CLI contract.
"tests/**" = ["S101", "S603"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
# Optional native backends have no type stubs; they are lazy-imported.
[[tool.mypy.overrides]]
module = ["sounddevice", "numpy", "mlx_whisper"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
